win32: add back missing _utf8 symbols on x64 builds

The _utf8 functions have been wrongly removed from GLib on x64.

https://bugzilla.gnome.org/show_bug.cgi?id=697879